pfish       2006/02/13 10:29:40 UTC	(20060213-4819)
  Log:
  PRIV_CHAN_AUSPEX will see when a channel is MC_INHABIT
  

  Changes:	Modified:
  +3 -0		trunk/modules/chanserv/info.c (File Modified) 


jilles      2006/02/10 17:49:03 UTC	(20060210-4817)
  Log:
  Send and parse nefarious 0.5.x topic setter information.
  Should be ignored by 0.4.x.
  Not tested.
  

  Changes:	Modified:
  +2 -2		trunk/protocol/nefarious.c (File Modified) 


jilles      2006/02/10 17:33:05 UTC	(20060210-4815)
  Log:
  Nefarious improvements, from reading the source code (not tested)
  - complete halfops support
  - ban exception support
  - oper only cmodes
  - apparently don't need to clear +N here (only applies to local clients)
  

  Changes:	Modified:
  +37 -26	trunk/protocol/nefarious.c (File Modified) 


nenolod     2006/02/10 15:02:54 UTC	(20060210-4813)
  Log:
  Add support for Nefarious IRCu 0.4.x or later
  

  Changes:	Modified:
  +1 -0		trunk/dist/example.conf (File Modified) 
  +1 -0		trunk/dist/example.userserv.conf (File Modified) 
  +34 -0	trunk/include/pmodule.h (File Modified) 
  + -		trunk/include/protocol/nefarious.h (File Added) 
  +1131 -0	trunk/protocol/Makefile.in (File Modified) 
  + -		trunk/protocol/nefarious.c (File Added) 


nenolod     2006/02/10 03:13:29 UTC	(20060210-4811)
  Log:
  1.0.1 -> Marsupial
  

  Changes:	Modified:
  +11 -11	trunk/configure (File Modified) 
  +1 -1		trunk/configure.ac (File Modified) 


nenolod     2006/02/10 03:02:02 UTC	(20060210-4807)
  Log:
  Use ubase64toint() from ircu. It's public domain, as the same
  basic algorithm is used in our base64 stuff too.
  

  Changes:	Modified:
  +2 -11	trunk/src/ubase64.c (File Modified) 


nenolod     2006/02/09 20:33:19 UTC	(20060209-4805)
  Log:
  Improve m_fjoin() quite a bit.
  

  Changes:	Modified:
  +1 -28	trunk/protocol/inspircd.c (File Modified) 


jilles      2006/02/09 14:46:01 UTC	(20060209-4803)
  Log:
  - Make server names case insensitive